--- a/templates/synapse/_homeserver.yaml
+++ b/templates/synapse/_homeserver.yaml
@@ -1820,7 +1820,7 @@ password_config:
 email:
   enable_notifs: {{ .Values.mail.enabled }}
   notif_from: {{ .Values.mail.from }}
-  {{- if .Values.mail.relay.enabled }}
+  {{- if eq .Values.mail.relay.enabled true }}
   smtp_host: {{ include "matrix.fullname" . }}-exim-relay
   smtp_port: {{ .Values.mail.relay.service.port }}
   {{- else }}
