--- a/templates/synapse/configmap.yaml
+++ b/templates/synapse/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   homeserver.yaml: |
     {{ include "homeserver.yaml" . | nindent 4 }}
-  {{ .Values.matrix.serverName }}.log.config: |
+  "{{ .Values.matrix.serverName }}.log.config": |
     version: 1
 
     formatters:
